packages/aidoku_plugin_loader/lib/src/wasm/wasm_bindings_generated.dart

// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: always_specify_types
// ignore_for_file: avoid_positional_boolean_parameters
// ignore_for_file: lines_longer_than_80_chars
// ignore_for_file: unreachable_from_main
// ignore_for_file: unused_element
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

/// Auto-generated bindings for the WebAssembly C API (wasm.h). Run: dart run ffigen --config ffigen.yaml Do not edit by hand — edit ffigen.yaml and regenerate.
///
class NativeWasmerBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeWasmerBindings(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeWasmerBindings.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
    : _lookup = lookup;

  late final ffi.Pointer<ffi.UintPtr> ___security_cookie = _lookup<ffi.UintPtr>('__security_cookie');

  int get __security_cookie => ___security_cookie.value;

  set __security_cookie(int value) => ___security_cookie.value = value;

  void wasm_byte_vec_new_empty(
    ffi.Pointer<wasm_byte_vec_t> out,
  ) {
    return _wasm_byte_vec_new_empty(
      out,
    );
  }

  late final _wasm_byte_vec_new_emptyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_byte_vec_t>)>>(
    'wasm_byte_vec_new_empty',
  );
  late final _wasm_byte_vec_new_empty = _wasm_byte_vec_new_emptyPtr
      .asFunction<void Function(ffi.Pointer<wasm_byte_vec_t>)>();

  void wasm_byte_vec_new(
    ffi.Pointer<wasm_byte_vec_t> out,
    int arg1,
    ffi.Pointer<ffi.Char> arg2,
  ) {
    return _wasm_byte_vec_new(
      out,
      arg1,
      arg2,
    );
  }

  late final _wasm_byte_vec_newPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_byte_vec_t>, ffi.Size, ffi.Pointer<ffi.Char>)>>(
        'wasm_byte_vec_new',
      );
  late final _wasm_byte_vec_new = _wasm_byte_vec_newPtr
      .asFunction<void Function(ffi.Pointer<wasm_byte_vec_t>, int, ffi.Pointer<ffi.Char>)>();

  void wasm_byte_vec_delete(
    ffi.Pointer<wasm_byte_vec_t> arg0,
  ) {
    return _wasm_byte_vec_delete(
      arg0,
    );
  }

  late final _wasm_byte_vec_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_byte_vec_t>)>>(
    'wasm_byte_vec_delete',
  );
  late final _wasm_byte_vec_delete = _wasm_byte_vec_deletePtr.asFunction<void Function(ffi.Pointer<wasm_byte_vec_t>)>();

  void wasm_engine_delete(
    ffi.Pointer<wasm_engine_t> arg0,
  ) {
    return _wasm_engine_delete(
      arg0,
    );
  }

  late final _wasm_engine_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_engine_t>)>>(
    'wasm_engine_delete',
  );
  late final _wasm_engine_delete = _wasm_engine_deletePtr.asFunction<void Function(ffi.Pointer<wasm_engine_t>)>();

  ffi.Pointer<wasm_engine_t> wasm_engine_new() {
    return _wasm_engine_new();
  }

  late final _wasm_engine_newPtr = _lookup<ffi.NativeFunction<ffi.Pointer<wasm_engine_t> Function()>>(
    'wasm_engine_new',
  );
  late final _wasm_engine_new = _wasm_engine_newPtr.asFunction<ffi.Pointer<wasm_engine_t> Function()>();

  void wasm_store_delete(
    ffi.Pointer<wasm_store_t> arg0,
  ) {
    return _wasm_store_delete(
      arg0,
    );
  }

  late final _wasm_store_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_store_t>)>>(
    'wasm_store_delete',
  );
  late final _wasm_store_delete = _wasm_store_deletePtr.asFunction<void Function(ffi.Pointer<wasm_store_t>)>();

  ffi.Pointer<wasm_store_t> wasm_store_new(
    ffi.Pointer<wasm_engine_t> arg0,
  ) {
    return _wasm_store_new(
      arg0,
    );
  }

  late final _wasm_store_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_store_t> Function(ffi.Pointer<wasm_engine_t>)>>('wasm_store_new');
  late final _wasm_store_new = _wasm_store_newPtr
      .asFunction<ffi.Pointer<wasm_store_t> Function(ffi.Pointer<wasm_engine_t>)>();

  late final ffi.Pointer<ffi.Uint32> _wasm_limits_max_default = _lookup<ffi.Uint32>('wasm_limits_max_default');

  int get wasm_limits_max_default => _wasm_limits_max_default.value;

  ffi.Pointer<wasm_functype_t> wasm_externtype_as_functype_const(
    ffi.Pointer<wasm_externtype_t> arg0,
  ) {
    return _wasm_externtype_as_functype_const(
      arg0,
    );
  }

  late final _wasm_externtype_as_functype_constPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_functype_t> Function(ffi.Pointer<wasm_externtype_t>)>>(
        'wasm_externtype_as_functype_const',
      );
  late final _wasm_externtype_as_functype_const = _wasm_externtype_as_functype_constPtr
      .asFunction<ffi.Pointer<wasm_functype_t> Function(ffi.Pointer<wasm_externtype_t>)>();

  void wasm_importtype_vec_new_empty(
    ffi.Pointer<wasm_importtype_vec_t> out,
  ) {
    return _wasm_importtype_vec_new_empty(
      out,
    );
  }

  late final _wasm_importtype_vec_new_emptyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_importtype_vec_t>)>>(
        'wasm_importtype_vec_new_empty',
      );
  late final _wasm_importtype_vec_new_empty = _wasm_importtype_vec_new_emptyPtr
      .asFunction<void Function(ffi.Pointer<wasm_importtype_vec_t>)>();

  void wasm_importtype_vec_delete(
    ffi.Pointer<wasm_importtype_vec_t> arg0,
  ) {
    return _wasm_importtype_vec_delete(
      arg0,
    );
  }

  late final _wasm_importtype_vec_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_importtype_vec_t>)>>('wasm_importtype_vec_delete');
  late final _wasm_importtype_vec_delete = _wasm_importtype_vec_deletePtr
      .asFunction<void Function(ffi.Pointer<wasm_importtype_vec_t>)>();

  ffi.Pointer<wasm_byte_vec_t> wasm_importtype_module(
    ffi.Pointer<wasm_importtype_t> arg0,
  ) {
    return _wasm_importtype_module(
      arg0,
    );
  }

  late final _wasm_importtype_modulePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_byte_vec_t> Function(ffi.Pointer<wasm_importtype_t>)>>(
        'wasm_importtype_module',
      );
  late final _wasm_importtype_module = _wasm_importtype_modulePtr
      .asFunction<ffi.Pointer<wasm_byte_vec_t> Function(ffi.Pointer<wasm_importtype_t>)>();

  ffi.Pointer<wasm_byte_vec_t> wasm_importtype_name(
    ffi.Pointer<wasm_importtype_t> arg0,
  ) {
    return _wasm_importtype_name(
      arg0,
    );
  }

  late final _wasm_importtype_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_byte_vec_t> Function(ffi.Pointer<wasm_importtype_t>)>>(
        'wasm_importtype_name',
      );
  late final _wasm_importtype_name = _wasm_importtype_namePtr
      .asFunction<ffi.Pointer<wasm_byte_vec_t> Function(ffi.Pointer<wasm_importtype_t>)>();

  ffi.Pointer<wasm_externtype_t> wasm_importtype_type(
    ffi.Pointer<wasm_importtype_t> arg0,
  ) {
    return _wasm_importtype_type(
      arg0,
    );
  }

  late final _wasm_importtype_typePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_externtype_t> Function(ffi.Pointer<wasm_importtype_t>)>>(
        'wasm_importtype_type',
      );
  late final _wasm_importtype_type = _wasm_importtype_typePtr
      .asFunction<ffi.Pointer<wasm_externtype_t> Function(ffi.Pointer<wasm_importtype_t>)>();

  void wasm_exporttype_vec_new_empty(
    ffi.Pointer<wasm_exporttype_vec_t> out,
  ) {
    return _wasm_exporttype_vec_new_empty(
      out,
    );
  }

  late final _wasm_exporttype_vec_new_emptyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_exporttype_vec_t>)>>(
        'wasm_exporttype_vec_new_empty',
      );
  late final _wasm_exporttype_vec_new_empty = _wasm_exporttype_vec_new_emptyPtr
      .asFunction<void Function(ffi.Pointer<wasm_exporttype_vec_t>)>();

  void wasm_exporttype_vec_delete(
    ffi.Pointer<wasm_exporttype_vec_t> arg0,
  ) {
    return _wasm_exporttype_vec_delete(
      arg0,
    );
  }

  late final _wasm_exporttype_vec_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_exporttype_vec_t>)>>('wasm_exporttype_vec_delete');
  late final _wasm_exporttype_vec_delete = _wasm_exporttype_vec_deletePtr
      .asFunction<void Function(ffi.Pointer<wasm_exporttype_vec_t>)>();

  ffi.Pointer<wasm_byte_vec_t> wasm_exporttype_name(
    ffi.Pointer<wasm_exporttype_t> arg0,
  ) {
    return _wasm_exporttype_name(
      arg0,
    );
  }

  late final _wasm_exporttype_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wasm_byte_vec_t> Function(ffi.Pointer<wasm_exporttype_t>)>>(
        'wasm_exporttype_name',
      );
  late final _wasm_exporttype_name = _wasm_exporttype_namePtr
      .asFunction<ffi.Pointer<wasm_byte_vec_t> Function(ffi.Pointer<wasm_exporttype_t>)>();

  void wasm_val_vec_new_empty(
    ffi.Pointer<wasm_val_vec_t> out,
  ) {
    return _wasm_val_vec_new_empty(
      out,
    );
  }

  late final _wasm_val_vec_new_emptyPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_val_vec_t>)>>(
    'wasm_val_vec_new_empty',
  );
  late final _wasm_val_vec_new_empty = _wasm_val_vec_new_emptyPtr
      .asFunction<void Function(ffi.Pointer<wasm_val_vec_t>)>();

  void wasm_val_vec_new_uninitialized(
    ffi.Pointer<wasm_val_vec_t> out,
    int arg1,
  ) {
    return _wasm_val_vec_new_uninitialized(
      out,
      arg1,
    );
  }

  late final _wasm_val_vec_new_uninitializedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_val_vec_t>, ffi.Size)>>(
        'wasm_val_vec_new_uninitialized',
      );
  late final _wasm_val_vec_new_uninitialized = _wasm_val_vec_new_uninitializedPtr
      .asFunction<void Function(ffi.Pointer<wasm_val_vec_t>, int)>();

  void wasm_val_vec_delete(
    ffi.Pointer<wasm_val_vec_t> arg0,
  ) {
    return _wasm_val_vec_delete(
      arg0,
    );
  }

  late final _wasm_val_vec_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_val_vec_t>)>>(
    'wasm_val_vec_delete',
  );
  late final _wasm_val_vec_delete = _wasm_val_vec_deletePtr.asFunction<void Function(ffi.Pointer<wasm_val_vec_t>)>();

  void wasm_trap_delete(
    ffi.Pointer<wasm_trap_t> arg0,
  ) {
    return _wasm_trap_delete(
      arg0,
    );
  }

  late final _wasm_trap_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_trap_t>)>>(
    'wasm_trap_delete',
  );
  late final _wasm_trap_delete = _wasm_trap_deletePtr.asFunction<void Function(ffi.Pointer<wasm_trap_t>)>();

  void wasm_trap_message(
    ffi.Pointer<wasm_trap_t> arg0,
    ffi.Pointer<wasm_byte_vec_t> out,
  ) {
    return _wasm_trap_message(
      arg0,
      out,
    );
  }

  late final _wasm_trap_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_trap_t>, ffi.Pointer<wasm_byte_vec_t>)>>(
        'wasm_trap_message',
      );
  late final _wasm_trap_message = _wasm_trap_messagePtr
      .asFunction<void Function(ffi.Pointer<wasm_trap_t>, ffi.Pointer<wasm_byte_vec_t>)>();

  void wasm_module_delete(
    ffi.Pointer<wasm_module_t> arg0,
  ) {
    return _wasm_module_delete(
      arg0,
    );
  }

  late final _wasm_module_deletePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<wasm_module_t>)>>(
    'wasm_module_delete',
  );
  late final _wasm_module_delete = _wasm_module_deletePtr.asFunction<void Function(ffi.Pointer<wasm_module_t>)>();

  ffi.Pointer<wasm_module_t> wasm_module_new(
    ffi.Pointer<wasm_store_t> arg0,
    ffi.Pointer<wasm_byte_vec_t> binary,
  ) {
    return _wasm_module_new(
      arg0,
      binary,
    );
  }
